--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "w20-bootstrap-3",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "ignore": [
     ".*",
     "*.iml",
@@ -16,9 +16,9 @@
     "test-main.js"
   ],
   "dependencies": {
-    "angular-bootstrap": "0.13.1",
-    "bootstrap": "3.3.5",
-    "font-awesome": "4.3.0",
-    "w20": "~2.1"
+    "angular-bootstrap": "^0.13",
+    "bootstrap": "^3.3.5",
+    "font-awesome": "^4.3.0",
+    "w20": "^2.0"
   }
 }
