--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "karma-phantomjs-launcher": "~0.1",
     "karma-requirejs": "~0.2",
     "requirejs": "~2.1"
+  },
+  "dependencies": {
+    "angular-ui-bootstrap": "^2.5.0",
+    "bootstrap": "~3.3.7",
+    "font-awesome": "^4.7.0"
   }
 }
