--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "w20-bootstrap-3",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "SeedStack Web framework",
   "license": "MPL 2.0",
   "devDependencies": {
     "grunt": "~0.4",
-    "grunt-bower-task": "~0.4",
     "grunt-contrib-clean": "~0.6",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "~0.7",
-    "grunt-contrib-jshint": "~0.10",
+    "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-coveralls": "^1.0.0",
-    "grunt-karma": "~0.9",
+    "grunt-karma": "^1.0.0",
     "grunt-ngdocs": "^0.2.8",
-    "karma": "~0.12",
+    "karma": "~0.13",
     "karma-coverage": "~0.2",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1",
@@ -25,6 +24,7 @@
   "dependencies": {
     "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "~3.3.7",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "w20": "^2.4.0"
   }
 }
