--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "w20-bootstrap-3",
-  "version": "2.3.0",
+  "version": "2.3.0-rc.1",
   "description": "SeedStack Web framework",
   "license": "MPL 2.0",
   "devDependencies": {
