--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "requirejs": "~2.1"
   },
   "dependencies": {
+    "angular-animate": "^1.6.9",
     "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "~3.3.7",
     "font-awesome": "^4.7.0",
