--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "w20-bootstrap-3",
-  "version": "2.3.0-rc.3",
-  "description": "SeedStack Web framework",
-  "license": "MPL 2.0",
+  "name": "@w20/w20-bootstrap-3",
+  "version": "2.3.0",
+  "description": "W20 Web framework",
+  "license": "MPL-2.0",
   "devDependencies": {
     "grunt": "~0.4",
     "grunt-contrib-clean": "~0.6",
@@ -24,8 +24,18 @@
   "dependencies": {
     "angular-animate": "^1.6.9",
     "angular-ui-bootstrap": "^2.5.0",
-    "bootstrap": "~3.3.7",
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
-    "w20": "git+https://github.com/jmmartinez84/w20.git"
-  }
+    "@w20/w20": "^2.4.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/w20-framework/w20-bootstrap-3.git"
+  },
+  "author": "W20 team",
+  "contributors": [
+    "Adrien LAUER <adrien.lauer@mpsa.com>",
+    "Kavi RAMYEAD <kavi.ramyead@ext.mpsa.com>",
+    "Jose Manuel MARTINEZ LAINEZ <josemanuel.martinez1@ext.mpsa.com>"
+  ]
 }
